--- a/react-router/demo/index.html
+++ b/react-router/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
+    <title>Hello React-Router</title>
 </head>
 <body>
     <div id="root">
