--- a/html/smoothScroll.html
+++ b/html/smoothScroll.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <style>
         #test {
-            height: 2000px;
+            --height: 2000px;
+            height: var(--height);
         }
     </style>
 </head>
